# mlctl

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/mlctl/: cli.py
