[project]
name = "mlctl"
version = "0.1.0"
description = "Machine Learning Platform Control CLI"
readme = "README.md"
authors = [
  { name = "Theophilus Siameh", email = "theodondre@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "argcomplete>=3.6.3",
    "argparse>=1.4.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer[all]>=0.21.1",
]
license = { text = "MIT" }

[project.scripts]
mlctl = "mlctl.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# requires = ["hatchling"]
# build-backend = "hatchling.build"

